--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "firebase": "^9.13.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.3",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
